fix(server): fix flicker on drag and remove redundant css

--- a/strictdoc/export/html/_static/base.css
+++ b/strictdoc/export/html/_static/base.css
@@ -95,11 +95,6 @@ body {
   background-color: var(--color-bg-main);
 }
 
-/* Change cursor to 'not-allowed' during a drag */
-body:has(.is-dragging) {
-  cursor: no-drop;
-}
-
 @font-face {
   font-family: 'Noto Sans';
   font-style: normal;
